[package]
name = "secret"
version = "0.1.0"
authors = ["Frank Groeneveld <frank@frankgroeneveld.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.0"

[dependencies.secret-sys]
path = "./secret-sys"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"
